mungegithub/cherrypick/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: @@-cherrypick
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cherrypick
        target-repo: @@
    spec:
      containers:
      - name: cherrypick
        command:
        - /mungegithub
        - --dry-run=true
        - --token-file=$(TOKEN_FILE)
        - --organization=$(ORGANIZATION)
        - --project=$(PROJECT)
        - --pr-mungers=$(PR_MUNGERS)
        - --state=$(STATE)
        - --labels=$(LABELS)
        - --http-cache-dir=$(HTTP_CACHE_DIR)
        - --admin-port=$(ADMIN_PORT)
        - --repo-dir=$(REPO_DIR)
        - --period=$(PERIOD)
        image: gcr.io/k8s-testimages/cherrypick:2016-03-14-7fb1dae
        ports:
        - name: status
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 600m
        volumeMounts:
        - mountPath: /etc/secret-volume
          name: cherrypick-secret-volume
        - mountPath: /gitrepo
          name: repo
      volumes:
      - name: cherrypick-secret-volume
        secret:
          secretName: cherrypick-secret-volume
      - name: repo
        emptyDir: {}
